// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builderz working for single package alias 1`] = `1`;

exports[`builderz working for single package alias 2`] = `
"'use strict';

const DEBUG = true;

console.log('DEBUG should be true: ', DEBUG);
"
`;

exports[`builderz working for single package basic-multi-entries-json 1`] = `1`;

exports[`builderz working for single package basic-multi-entries-json 2`] = `
"'use strict';

console.log('i am a');

console.log('i am b');
"
`;

exports[`builderz working for single package pure 1`] = `10`;

exports[`builderz working for single package pure 2`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

// this is currently broken because of a bug in terser
// https://github.com/terser-js/terser/issues/353

/** @__PURE__ */
function foo() {
  return \\"hello world\\";
}

exports.foo = foo;
"
`;

exports[`builderz working for single package pure 3`] = `
"// this is currently broken because of a bug in terser
// https://github.com/terser-js/terser/issues/353

/** @__PURE__ */
function foo() {
  return \\"hello world\\";
}

export { foo };
"
`;

exports[`builderz working for single package pure 4`] = `
"\\"use strict\\";Object.defineProperty(exports,\\"__esModule\\",{value:!0}),exports.foo=function(){return\\"hello world\\"};
//# sourceMappingURL=pure.min.cjs.js.map
"
`;

exports[`builderz working for single package pure 5`] = `
"function o(){return\\"hello world\\"}export{o as foo};
//# sourceMappingURL=pure.min.esm.js.map
"
`;

exports[`builderz working for single package pure 6`] = `
"!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?n(exports):\\"function\\"==typeof define&&define.amd?define([\\"exports\\"],n):n(((e=e||self).pure=e.pure||{},e.pure.min=e.pure.min||{},e.pure.min.umd=e.pure.min.umd||{},e.pure.min.umd.js={}))}(this,(function(e){\\"use strict\\";e.foo=function(){return\\"hello world\\"},Object.defineProperty(e,\\"__esModule\\",{value:!0})}));
//# sourceMappingURL=pure.min.umd.js.map
"
`;

exports[`builderz working for single package pure 7`] = `
"(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = global || self, factory((global.pure = global.pure || {}, global.pure.umd = global.pure.umd || {}, global.pure.umd.js = {})));
}(this, (function (exports) { 'use strict';

  // this is currently broken because of a bug in terser
  // https://github.com/terser-js/terser/issues/353

  /** @__PURE__ */
  function foo() {
    return \\"hello world\\";
  }

  exports.foo = foo;

  Object.defineProperty(exports, '__esModule', { value: true });

})));
//# sourceMappingURL=pure.umd.js.map
"
`;
